# SPDX-FileCopyrightText: 2023 Wiktor Kwapisiewicz <wiktor@metacode.biz>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "tangler"
version = "0.2.0"
edition = "2021"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
description = "Extracts code blocks from Markdown documents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wiktor-k/tangler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.15.0"

[dev-dependencies]
rstest = "0.18.2"
testresult = "0.3.0"

